--- a/package.json
+++ b/package.json
@@ -70,7 +70,6 @@
     "nodemailer": "^6.9.8",
     "pdfkit": "^0.15.0",
     "postcss": "8.4.30",
-    "prisma": "^5.7.1",
     "razorpay": "^2.9.2",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
@@ -88,6 +87,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17"
+    "@types/cors": "^2.8.17",
+    "prisma": "^6.13.0"
   }
 }
